src/includes/_forms.scss
/* ... */
textarea {
    width: 100%;
    min-height: calc(var(--padding-buttons) + 1rem + var(--padding-buttons));
}
textarea, select {
    scrollbar-width: thin;
    scrollbar-color: var(--scrollbar-foreground) var(--scrollbar-background);

    &::-webkit-scrollbar {
        height: 5px;
        width: 5px;
        border-radius: 2px;
    }

    &::-webkit-scrollbar-thumb {
        background-color: var(--color-scrollbar-foreground);
        border-radius: 2px;
    }

    &::-webkit-scrollbar-track {
        background-color: var(--color-scrollbar-background);
    }
}
button, input[type="submit"], a.button {
    text-align: center;
    width: auto;
    cursor: pointer;
    font-weight: 600;
    font-size: .75rem;
    justify-content: center;
    align-items: center;

    &:hover {
        background-color: var(--color-link-background-hover);
    }

    &:focus {
        background-color: var(--color-link-background-hover);
        border-color: transparent;
        outline: var(--outline-buttons);
        box-shadow: var(--box-shadow-medium);
    }

    &.transparent {
        font-weight: 400;
        background-color: transparent;
    }

    &.right-icon {
        flex-direction: row-reverse;
    }

    &.success {
        background-color: var(--color-success) !important;
        color: white;
    }

    &.error {
        background-color: var(--color-error) !important;
        color: white;
    }

    &.warning {
        background-color: var(--color-warning) !important;
        color: white;
    }

    &.info {
        background-color: var(--color-info) !important;
        color: white;
    }
}
button, a.button {
    &[class^="icon-"], &[class*=" icon-"], & span[class^="icon-"] {
        &:before {
            display: block;
            font-size: 1.3333em;
            line-height: inherit;
            margin: 0 !important;
        }
    }

    &.full-width {
        width: 100%;
    }
    /* Default:
    &.small {
        padding: 0.5em .6em;
        font-size: .75rem;
    }
    */
    &.medium {
        padding: 0.625em .75em;
        font-size: .875rem;
    }

    &.large {
        padding: 0.75em .9em;
        font-size: 1rem;
    }

    &.x-large {
        padding: 0.875em 1.05em;
        font-size: 1.125rem;
    }

    &.xx-large {
        padding: 1em 1.2em;
        font-size: 1.25rem;
    }
}
a.button {
    &:hover, &:focus {
        text-decoration: none;
    }
}
select {
    cursor: pointer;

    &.full-width {
        width: 100%;
    }
    // Single select
    &:not([multiple]) {
        // Arrow - SVG background image
        background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%2324292f'><path d='M7.406 8.578l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'></path></svg>");
        background-size: 1em;
        background-position: calc(100% - var(--padding-buttons)) 50%;
        background-repeat: no-repeat;
        padding-right: calc(var(--padding-buttons) * 2 + 1em);

        &:hover, &:focus {
            background-color: var(--color-link-background-hover);
        }

        option {
            background: white;
            /* Not working - some option properties are styled by the OS
            &:first-child {
                padding-top: var(--padding-buttons);
                border-top-left-radius: var(--border-radius-button);
                border-top-right-radius: var(--border-radius-button);
            }

            &:last-child {
                padding-bottom: var(--padding-buttons);
                border-bottom-left-radius: var(--border-radius-button);
                border-bottom-right-radius: var(--border-radius-button);
            }
            */
        }
    }
    // Multiple select
    &[multiple] {
        padding: calc(var(--padding-buttons) * 0.8571) 0;
        overflow: visible auto;

        // Fix height for iOS
        min-height: calc(var(--padding-buttons) * 0.8571 * 2 + 1px + 1.1rem);

        option {
            padding: 2px var(--padding-buttons);
            background-color: transparent;

            &:checked {
                background-color: white;
                border: var(--border-medium);
                border-radius: 1em;
            }
        }
    }
}
/*
    Input elements cannot have :before or :after content. 
    So to apply an icon, wrap the element in a <label> tag.
*/
// Icon label (left)
label:not([for])[class^="icon-"], label:not([for])[class*=" icon-"] {

    &:before {
        position: absolute;
        margin: 0 0 0 calc(var(--padding-buttons) + 1px);
        font-size: 1rem;
        color: var(--color-text-light);
        z-index: 1;
    }

    & > input, & > textarea, & > select {
        padding-left: calc(var(--padding-buttons) * 2 + 1rem);
    }

    &:has(>textarea) {
        &:before {
            margin-top: var(--padding-buttons);
        }
    }

    &:has(>select[multiple]) {
        &:before {
            margin-top: var(--padding-buttons);
        }
    }
}
/* ... */

